5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1715_3039.log
== TEST (2019-05-02 16:15:57) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 and x < (-1/2) or x > (1/2) and 1 >= x
	fx = asin(x)
	print(fx)


-- ERROR:
File "XXXX", line 5
    if x >= -1 and x < (-1/2) or x > (1/2) and 1 >= x
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:00) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 and x < (-1/2) or x > (1/2) and 1 >= x:
	fx = asin(x)
	print(fx)


-- OUTPUT:
-1.4292568534704693
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:18) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 and x < (-1/2) or x > (1/2) and 1 >= x:
	fx = degrees(asin(x))
	print(fx)


-- OUTPUT:
-81.89038554400581
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:35) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 and x < (-1/2) or x > (1/2) and 1 >= x:
	fx = degrees(asin(x))
	print(round(fx,2))


-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:50) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 and x < (-1/2) or x > (1/2) and 1 >= x:
	fx = degrees(asin(x))
	print(round(fx,2))


-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:20) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 and x < (-1/2) or x > (1/2) and 1 >= x:
	fx = degrees(asin(x))
	print(round(fx,2))


-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:24) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 and x < (-1/2) or x > (1/2) and 1 >= x:
	fx = degrees(asin(x))
	print(round(fx,2))


-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:19:21) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 and x < (-1/2) or x > (1/2) and 1 >= x:
	fx = degrees(asin(x))
	print(x,fx)
	print(round(fx,2))
	
	fx = degrees


-- OUTPUT:
-0.99 -81.89038554400581
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:19:30) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 and x < (-1/2) or x > (1/2) and 1 >= x:
	fx = degrees(asin(x))
	print(x,fx)
	print(round(fx,2))
	
	fx = degrees


-- OUTPUT:
-0.99 -81.89038554400581
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:11) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(x,fx)
	print(round(fx,2))
	
	fx = degrees


-- OUTPUT:
-0.99 -81.89038554400581
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:02) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
if (-1/2) <= x <= (1/2)
	fx = degrees(acos(x))
	print(round(fx,2))


-- ERROR:
File "XXXX", line 8
    if (-1/2) <= x <= (1/2)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:06) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))


-- OUTPUT:
-81.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:15) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))


-- OUTPUT:
-1.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:19) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = acos(x)
	print(round(fx,2))


-- OUTPUT:
-1.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:31) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = acos(x)
	print(round(fx,2))
	
print(x)
print(fx)


-- OUTPUT:
-1.43
-0.99
-1.4292568534704693
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:45) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = acos(x)
	print(round(fx,2))

fx = asin(x)
print(x)
print(fx)


-- OUTPUT:
-1.43
-0.99
-1.4292568534704693
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:24:19) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = acos(x)
	print(round(fx,2))
	

fx = sin(x)
print(x)
print(fx)


-- OUTPUT:
-1.43
-0.99
-0.8360259786005205
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:24:44) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = acsin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = acos(x)
	print(round(fx,2))
	

fx = sin(x)
print(x)
print(fx)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    fx = acsin(x)
NameError: name 'acsin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:02) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = acsin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = acos(x)
	print(round(fx,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    fx = acsin(x)
NameError: name 'acsin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:07) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = acos(x)
	print(round(fx,2))



-- OUTPUT:
-1.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:24) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = acos(x)
	print(degrees(round(fx,2)))



-- OUTPUT:
-1.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:46) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))



-- OUTPUT:
-1.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:53) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))



-- OUTPUT:
-1.43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:26:21) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.146951
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-1.43
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
x: entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
x: 102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:26:23) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-1.43
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:26:25) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-1.43
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:26:29) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-1.43
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:26:36) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.257545
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-1.43
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:26:36) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.155508
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-1.43
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-1.43
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-1.43
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:26:37) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.135134
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-1.43
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-1.43
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:26:37) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.20234
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-1.43
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-1.43
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-1.43
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:26:37) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.328949
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-1.43
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:26:37) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.326374
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
102.12
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:26:47) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.190318
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-1.43
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:26:48) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.122108
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-1.43
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-1.43
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:26:48) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.203146
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
entrada invalida
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-1.43
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:26:48) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-1.43
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:26:48) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = asin(x)
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.160202
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-1.43
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
x: entrada invalida
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:06) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-81.89
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:07) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.167593
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:08) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.161007
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:08) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.133034
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:08) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.225439
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:09) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.399985
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:09) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.194566
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:10) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.516826
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:10) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.378882
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
entrada invalida
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:10) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.447724
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
entrada invalida
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:10) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.475613
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:10) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.548286
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:11) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.580581
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
entrada invalida
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:11) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-81.89
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:11) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.310806
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
entrada invalida
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:11) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.227823
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
entrada invalida
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:11) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
else:
	print("entrada invalida")
if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.448626
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:26) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-81.89
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:31) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.203499
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:32) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.20734
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:32) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.16973
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:33) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.187101
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:33) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.253774
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:17) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-81.89
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:20) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-81.89
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:22) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-81.89
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:28) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-81.89
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:29) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-81.89
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:29) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-81.89
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:36) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- OUTPUT:
-81.89
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:44) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.174668
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:44) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.201352
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:44) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.255434
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
102.12
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:45) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.36636
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:45) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.178
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:45) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.141121
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:46) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.197159
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:46) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.173735
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:47) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.413041
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:47) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.390788
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:47) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.263877
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:48) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.446643
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:48) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.436149
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:48) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.557244
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
102.12
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:48) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.410166
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:49) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.403138
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:49) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.320881
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:49) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.269613
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:50) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.54473
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:50) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.506113
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:50) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.429901
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
102.12
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:51) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.419284
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:51) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.504712
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:51) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.577008
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:52) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.415883
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
-81.89
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:52) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.451698
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:52) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.559542
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:52) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.400422
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
102.12
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:52) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.533752
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:52) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.492751
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:53) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.429327
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:53) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.303727
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:54) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.405485
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:54) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.372757
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
-81.89
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:54) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.54506
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
102.12
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:55) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.551267
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:55) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.491599
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:55) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.349205
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1715/3039/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:55) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.404534
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
102.12
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
102.12
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:55) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))

if (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.483605
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
entrada invalida
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:29:04) 
-- CODE:
from math import *

x = float(input("x: "))

if x >= -1 <= x < (-1/2) or (1/2) < x <= 1:
	fx = degrees(asin(x))
	print(round(fx,2))
elif (-1/2) <= x <= (1/2):
	fx = degrees(acos(x))
	print(round(fx,2))
else:
	print("entrada invalida")



-- EXECUTION TIME:
0.15147
-- TEST CASE 1:
---- input:
-0.99
---- correct output:
-81.89
---- user output:
-81.89
-- TEST CASE 2:
---- input:
1.51
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-0.21
---- correct output:
102.12
---- user output:
102.12
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
